--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li> <a href="#about"> about </a> </li>
 				<li> <a href="#education"> education </a> </li>
 				<li> <a href="#skills "> skills </a> </li>
-				<li> <a href="#favorits"> favorits </a> </li>
+				<li> <a href="#contact"> conntact </a> </li>
 			</ul>
 		</nav> 
 		<div id="main" class="open-min">
